--- a/index.html
+++ b/index.html
@@ -1,4 +1,38 @@
-<a href="/Tool-KODIVN.zip">Tool-KODIVN.zip</a><br/>
-<a href="/Tool-KODIVN.zip">Tool-KODIVN2.zip</a><br/>
-<a href="phuocphap/Tool-KODIVN.zip">Tool-KODIVN.zip</a> <br/>
-<a href="phuocphap/Tool-KODIVN.zip">Tool-KODIVN3.zip</a> <br/>
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hướng Dẫn Thêm Source Kodi</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
+        h1 { color: #2c3e50; }
+        ol { background: #ecf0f1; padding: 15px; border-radius: 5px; }
+        li { margin: 10px 0; }
+        a { color: #3498db; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+    </style>
+</head>
+<body>
+    <h1>Hướng Dẫn Thêm Source Kodi</h1>
+    <p>Để tải <strong>Tool-KODIVN.zip</strong>, hãy làm theo các bước sau:</p>
+    <ol>
+        <li>Mở Kodi trên thiết bị của bạn.</li>
+        <li>Vào <strong>File Manager</strong> bằng cách chọn <strong>Cài đặt (Settings) → Quản lý tập tin (File Manager)</strong>.</li>
+        <li>Chọn <strong>Thêm nguồn (Add source)</strong>.</li>
+        <li>Nhấn vào ô <strong>&lt;None&gt;</strong> và nhập địa chỉ sau:</li>
+        <li style="list-style-type: none; margin-left: 20px;">
+            <a href="https://rupanh123-phap.github.io" target="_blank">https://rupanh123-phap.github.io</a>
+        </li>
+        <li>Đặt tên cho nguồn, ví dụ: <strong>KodiVN</strong>, rồi nhấn <strong>OK</strong>.</li>
+        <li>Quay lại màn hình chính của Kodi.</li>
+        <li>Vào <strong>Add-ons</strong> → chọn biểu tượng <strong>hộp mở (Package Installer)</strong> ở góc trên trái.</li>
+        <li>Chọn <strong>Install from zip file</strong>.</li>
+        <li>Tìm và chọn nguồn <strong>KodiVN</strong> vừa thêm.</li>
+        <li>Chọn <strong>Tool-KODIVN.zip</strong> để cài đặt.</li>
+    </ol>
+    <p>Sau khi cài đặt xong, addon sẽ xuất hiện trong danh sách Add-ons của bạn.</p>
+    
+    <p><strong>Tải xuống:</strong> <a href="/Tool-KODIVN.zip">Tool-KODIVN.zip</a></p>
+</body>
+</html>
