--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
         h1 { color: #2c3e50; }
-        ol { background: #ecf0f1; padding: 15px; border-radius: 5px; }
+        ol {
+    background: #ecf0f1;
+    padding: 15px;
+    border-radius: 5px;
+    list-style-position: inside;
+}
+
         li { margin: 10px 0; }
         a { color: #3498db; text-decoration: none; }
         a:hover { text-decoration: underline; }
